========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-03-12

  - Sync up the print report code with the print command code, fixing a bug with
    precision not being rendered correctly by the print report.

  - Fixed #104: bean-format would fail on numbers with commas in them.

  - Fixed #106: The "render_commas" option wasn't being honored. I have no idea
    how things came to be this way, but I fixed it. When rendering numbers,
    inserting commas for thousands (e.g., "1,000" vs. "1000") is now controlled
    by the "render_commas" option, and the default is not to render them
    (FALSE). Note:  This should affect the web interface, the reports, and the
    PRINT command, but so far NOT the output of the SQL query reports. The
    reason for this is historical: the query rendering code does not make use of
    the DisplayContext; it needs to be converted to do that. See
    https://bitbucket.org/blais/beancount/issues/105/
    https://bitbucket.org/blais/beancount/issues/106/
    https://bitbucket.org/blais/beancount/issues/107/ and
    https://groups.google.com/d/msg/beancount/frfN1zc6TEc/d5OjuDnREgAJ for a
    discussion.


2016-03-06

  - Fixed issue #83: Renamed 'default_tolerance' option to
    'inferred_tolerance_default'.


2016-03-05

  - Improved handling of corrupted or out-of-date pickle cache file.

  - Fixed a test that would only fail in a timzone != EST.

  - Made bean-file use the configuration filename's directory as the default
    output dir instead of requiring an option. The behavior of providing a
    reasonable default makes most sense.


2016-02-28

  - Moved beancount.scripts.report to beancount.report.report in order to be
    consistent with the way other libraries are invoked. I had to move
    beancount.report.report out of the way (to beancount.report.base) to make
    space for it.
